--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,11 +1,11 @@
-<div class="center jumbotron">
+<div class="center jumbotron bg bg-light"">
   <h1>Welcome to the Sample App</h1>
 
-  <h2>
+  <h5>
     This is the home page for the
     <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
     sample application.
-  </h2>
+  </h5>
 
   <%= link_to "Sign up now!", '#', class: "btn btn-lg btn-primary" %>
 </div>
