--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -10,9 +10,9 @@ $gray-light: #c0c0c0;
 
 /* universal */
 
-body {
-  padding-top: 60px;
-}
+// body {
+// padding-top: 60px;
+// }
 
 section {
   overflow: auto;
