--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,7 +2,7 @@
 <h1>Sign up</h1>
 
 <div class="row">
-  <div class="col-6 align-self-center mx-5">
+  <div class="col-md-4 offset-md-4">
     <%= form_with(model: @user, local: true) do |f| %>
       <%= f.label :name %>
       <%= f.text_field :name %>
