--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -11,7 +11,7 @@
           <li><%= link_to "Settings", '#' %></li>
           <li><%= link_to "Log out", logout_path, method: :delete %></li>
         <% else %>
-          <li><%= link_to "Log in", '#' %></li>
+          <li><%= link_to "Log in", login_path, method: :get %></li>
         <% end %>
       </ul>
     </nav>
