--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,14 +1,5 @@
-<div class="center jumbotron bg bg-light"">
-  <h1>Welcome to the Sample App</h1>
-
-  <h5>
-    This is the home page for the
-    <a href="https://railstutorial.jp/">Ruby on Rails Tutorial</a>
-    sample application.
-  </h5>
-
-  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary m-3" %>
-</div>
-
-<%= link_to image_tag("rails.svg", alt: "Rails logo", width: "200px"),
-                      "https://rubyonrails.org/" %>
+<% if logged_in? %>
+  <%= render 'static_pages/home_logged_in' %>
+<% else %>
+  <%= render 'static_pages/home_logged_out' %>
+<% end %>
